--- a/index.html
+++ b/index.html
@@ -5,8 +5,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body> 
+    <main>
+        <header>
+            <div class="topBar">
+                <a class="logo" href="index.html"><img src="./assets/icons8-html-logo-24.png" alt="Header Logo"></a>
+                <a href="">header link one</a>
+                <a href="">header link two</a>
+                <a href="">header link three</a>
+            </div>
+            <div class="mainContent">
+                <h1>This website is awesome</h1>
+                <h4>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</h4>
+                <button>Sign Up</button>
+                <img class="image" src="./assets/pexels-kaip-1341279.jpg" alt="Starry sky" width="240" height="135">
+            </div>
+        </header>
+    </main>
+    <main>
+        <div class="second">
+            <h2>Some random info</h2>
+            <img src="./assets/pexels-cody-berg-463684.jpg" alt="" width="200" height="200">
+            <p>This is some subtext under an illustration or an image</p>
+            <img src="./assets/pexels-ingriddietrich-1362595.jpg" alt="" width="200" height="200">
+            <p>This is some subtext under an illustration or an image</p>
+            <img src="./assets/pexels-nubikini-386025.jpg" alt="" width="200" height="200">
+            <p>This is some subtext under an illustration or an image</p>
+            <img src="./assets/pexels-pengwhan-1767434.jpg" alt="" width="200" height="200">
+            <p>This is some subtext under an illustration or an image</p>
+        </div>
+    </main>
+    <main>
+        <div class="third">
+            <h2>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is ttat it looks nice. </h2>
+            <p>-Thor, God of thunder</p>
+        </div>
+    </main>
+    <main>
+        <div class="fourth">
+
+        </div>
+    </main>
+    <main>
+        <div class="fifth">
+            <h4>Call to action! It's time!</h4>
+            <p>Sign up for our product by clicking that button over there!</p>
+            <button>Sign up</button>
+        </div>
+    </main>
+    <footer class="sixth">
+        Copyright the Odin Project 2025
+    </footer>
+    
     
 </body>
 </html>
