Designade första huvuddelen

--- a/index.html
+++ b/index.html
@@ -17,10 +17,14 @@
                 <a href="">header link three</a>
             </div>
             <div class="mainContent">
-                <h1>This website is awesome</h1>
-                <h4>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</h4>
-                <button>Sign Up</button>
-                <img class="image" src="./assets/pexels-kaip-1341279.jpg" alt="Starry sky" width="240" height="135">
+                <div class="subMain1">
+                    <h1>This website is awesome</h1>
+                    <h4>This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</h4>
+                    <button>Sign Up</button>
+                </div>
+                    <div class="subMain2">
+                    <img class="image" src="./assets/pexels-kaip-1341279.jpg" alt="Starry sky" width="480" height="270">
+                </div>
             </div>
         </header>
     </main>
