fixade quotet, citatet

--- a/index.html
+++ b/index.html
@@ -31,19 +31,23 @@
     <main>
         <div class="second">
             <h2>Some random info</h2>
-            <img src="./assets/pexels-cody-berg-463684.jpg" alt="" width="200" height="200">
-            <p>This is some subtext under an illustration or an image</p>
-            <img src="./assets/pexels-ingriddietrich-1362595.jpg" alt="" width="200" height="200">
-            <p>This is some subtext under an illustration or an image</p>
-            <img src="./assets/pexels-nubikini-386025.jpg" alt="" width="200" height="200">
-            <p>This is some subtext under an illustration or an image</p>
-            <img src="./assets/pexels-pengwhan-1767434.jpg" alt="" width="200" height="200">
-            <p>This is some subtext under an illustration or an image</p>
+            <div class="images">
+                <img src="./assets/pexels-cody-berg-463684.jpg" alt="" width="200" height="200">
+                <img src="./assets/pexels-ingriddietrich-1362595.jpg" alt="" width="200" height="200">
+                <img src="./assets/pexels-nubikini-386025.jpg" alt="" width="200" height="200">
+                <img src="./assets/pexels-pengwhan-1767434.jpg" alt="" width="200" height="200">
+            </div>
+            <div class="subtext">
+                <p>This is some subtext under an illustration or an image</p>
+                <p>This is some subtext under an illustration or an image</p>
+                <p>This is some subtext under an illustration or an image</p>
+                <p>This is some subtext under an illustration or an image</p>
+            </div>
         </div>
     </main>
     <main>
         <div class="third">
-            <h2>This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is ttat it looks nice. </h2>
+            <p class="quote">This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. </h2>
             <p>-Thor, God of thunder</p>
         </div>
     </main>
