--- a/index.html
+++ b/index.html
@@ -51,19 +51,17 @@
             <p>-Thor, God of thunder</p>
         </div>
     </main>
+
     <main>
         <div class="fourth">
-
+            <div class="fourthContain">
+                <p><strong>Call to action! It's time!</strong><br> Sign up for our product by clicking that button over there!</p>
+                <button>Sign up</button>
+            </div>
+                
         </div>
     </main>
-    <main>
-        <div class="fifth">
-            <h4>Call to action! It's time!</h4>
-            <p>Sign up for our product by clicking that button over there!</p>
-            <button>Sign up</button>
-        </div>
-    </main>
-    <footer class="sixth">
+    <footer class="fifth">
         Copyright the Odin Project 2025
     </footer>
     
